# app/Http/Controllers/ProviderController.php
@@ -4,6 +4,7 @@ namespace App\Http\Controllers;
 
 use App\Models\Provider;
 use Illuminate\Http\Request;
+use App\Http\Resources\ProviderResource;
 use App\Http\Resources\ProviderCollection;
 
 class ProviderController extends Controller
@@ -26,7 +27,10 @@ class ProviderController extends Controller
      */
     public function store(Request $request)
     {
-        //
+        $provider = Provider::create($request->only([
+            'name', 'logo', 'info', 'email', 'telephone'
+        ]));
+        return new ProviderResource($provider);
     }
 
     /**
