# routes/api.php
@@ -21,5 +21,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 });
 
 Route::apiResource('/plants', PlantController::class);
-Route::apiResource('/provider', ProviderController::class)->only(['index', 'show']);
+// Route::apiResource('/provider', ProviderController::class)->only(['index', 'show']);
+Route::apiResource('/providers', ProviderController::class);
 
